\"namespace SogaRecibos.Application.Receipts.Strategies; public interface IReceiptValidator { }\" 
