\"namespace SogaRecibos.Infrastructure.Receipts.Validation; public class CoserviciosReceiptValidator { }\" 
