namespace SogaRecibos.API.Controllers;

public class ReceiptsController 
{ 
}